--- a/chatAPP/makefile
+++ b/chatAPP/makefile
@@ -19,7 +19,15 @@ standup:
 	docker-compose exec app apt install nodejs npm
 	docker-compose exec app npm install
 	docker-compose exec app npm run dev
-	docker-compose exec app php artisan key:generate
+    #chat用 pusher laravel echo
+    docker-compose exec app composer require laravel/ui:1.2.0
+    docker-compose exec app php artisan ui vue --auth
+    docker-compose exec app npm install
+    docker-compose exec app npm run dev
+    docker-compose exec app composer require pusher/pusher-php-server "~4.0"
+    docker-compose exec app npm install --save laravel-echo pusher-js
+    #chat用ここまで
+    docker-compose exec app php artisan key:generate
 	docker-compose exec app php artisan config:cache
 
 init:
